Исправление drag'n'drop

--- a/index.html
+++ b/index.html
@@ -78,6 +78,66 @@
                         <li class="carousel__slide">
                             <img class="carousel__content" />
                         </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
+                        <li class="carousel__slide">
+                            <img class="carousel__content" />
+                        </li>
                     </ul>
 
                     <button class="carousel__button carousel__button--next">
