--- a/index.html
+++ b/index.html
@@ -1,155 +1,156 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Карусель</title>
-        <meta charset="utf8" />
-        <link rel="stylesheet" href="./style.css" />
-    </head>
-    <body class="page">
-        <header class="page__header header">
-            <div class="container">
-                <h1 class="header__charpet"></h1>
-            </div>
-        </header>
-        <main class="page__main main">
-            <div class="container">
-                <div class="carousel">
-                    <button class="carousel__button carousel__button--prev">
-                        Предыдущий
-                    </button>
-                    <ul class="carousel__slides">
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                        <li class="carousel__slide">
-                            <img class="carousel__content" />
-                        </li>
-                    </ul>
+	<head>
+		<title>Карусель</title>
+		<meta charset="utf8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body class="page">
+		<header class="page__header header">
+			<div class="container">
+				<h1 class="header__charpet"></h1>
+			</div>
+		</header>
+		<main class="page__main main">
+			<div class="container">
+				<div class="carousel">
+					<button class="carousel__button carousel__button--prev">
+						Предыдущий
+					</button>
+					<ul class="carousel__slides">
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+						<li class="carousel__slide">
+							<img class="carousel__content" />
+						</li>
+					</ul>
 
-                    <button class="carousel__button carousel__button--next">
-                        Следующий
-                    </button>
-                </div>
-            </div>
-        </main>
-        <script src="./Cerousel.js"></script>
-        <script>
-            const a = new Slider();
-            a.initialization();
-        </script>
-    </body>
+					<button class="carousel__button carousel__button--next">
+						Следующий
+					</button>
+				</div>
+			</div>
+		</main>
+		<script src="./Cerousel.js"></script>
+		<script>
+			const a = new Slider();
+			a.initialization();
+		</script>
+	</body>
 </html>
